kube-system/cilium-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTPS
      port: 443
      name: https
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: letsencrypt
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homematic-callback-gateway
spec:
  gatewayClassName: cilium
  listeners:
    # Homematic does not support using HTTPS here!
    - protocol: HTTP
      port: 34711
      name: homematic-callback
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: smart-home
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: paperless-ngx-smb-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: smb
      protocol: TCP
      port: 445
      allowedRoutes:
        kinds:
          - kind: TCPRoute
